<resources>
    <string name="app_name">App demo</string>

    <string name="request_get">get请求</string>
    <string name="request_post">post请求</string>
    <string name="request_upload_file">系统相册中的图片上传</string>
    <string name="title_activity_login">XanderAppSet</string>
    <string name="serail_pool_test">串行线程池测试</string>
    <string name="current_pool_test">并行线程池测试</string>
    <string name="tab_layout_view_pager">导航卡</string>
    <string name="https">https</string>
    <string name="coordinator_tabLayout">CoordinatorTabLayout</string>


    <!-- Strings related to login -->
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="age">年龄:</string>
    <string name="teltphone">手机号:</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_register">注册</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_new">新用户注册</string>
    <string name="telephone">请输入您的手机号</string>
    <string name="new_password">新密码</string>
    <string name="cancel">取消</string>
    <string name="sure_modify">确定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_display_data">清除展示的数据</string>
    <string name="get">get请求</string>
    <string name="post">post请求</string>
    <string name="get_picture">请求一张图片</string>

</resources>
