<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/balck"
        android:gravity="center"
        android:textSize="@dimen/modify_text_size"
        android:text="修改密码"/>
    <EditText
        android:id="@+id/modify_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/balck"
        android:hint="@string/account"/>

    <EditText
        android:id="@+id/modify_phone"
        android:layout_width="match_parent"
        android:textColor="@color/balck"
        android:layout_height="wrap_content"
        android:hint="@string/telephone"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/balck"
        android:fontFamily="sans-serif"
        android:hint="@string/new_password"
        android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/modify_cancle"
            android:layout_marginEnd="100dp"
            android:text="@string/cancel"
            android:background="@drawable/dialog_cancle_btn_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/modify_sure"
            android:text="@string/sure_modify"
            android:background="@drawable/dialog_sure_btn_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
