<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/parent_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="账号："/>
            <EditText
                android:id="@+id/name"
                android:text="596928539"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密码："/>
            <EditText
                android:id="@+id/age"
                android:text="102425"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:minHeight="0dp"
                android:text="并行测试"
                android:onClick="concurrentPool"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <Button
                android:minHeight="0dp"
                android:text="串行测试"
                android:onClick="serialPool"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <Button
                android:minHeight="0dp"
                android:text="@string/get_picture"
                android:onClick="getPicture"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:minHeight="0dp"
                android:text="@string/get"
                android:onClick="sendGetRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:minHeight="0dp"
                android:text="@string/post"
                android:onClick="sendPostRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:minHeight="0dp"
                android:id="@+id/clear_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clear"
                android:text="@string/clear_display_data"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="请求结果如下："/>
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/result_data"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/result_data2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
